--- a/src/main.sass
+++ b/src/main.sass
@@ -53,6 +53,7 @@ h1
 p  
   font-size: var(--text-xs) 
   margin-bottom: 0
+  margin-top: 16px
 
 button
   font-family: inherit
@@ -64,7 +65,11 @@ a
 hr
   border: none
   border-top: 1px solid #e0e0e0
+  margin: 10px 0 20px
 
+img
+  max-width: 100%
+  
 ul
   margin-bottom: 0
   padding-left: 0
