Change navigation from Link to NavLink

--- a/src/components/header/Header.sass
+++ b/src/components/header/Header.sass
@@ -10,6 +10,11 @@
     display: flex
     gap: 12px
     align-items: center
-  a
-    font-weight: 500
-    font-size: var(--text-xs)
+  
+.header__link
+  padding: 6px
+  font-weight: 500
+  font-size: var(--text-xs)
+
+.header__link--active
+  border-bottom: 3px solid var(--color-text)
